--- a/views/lecturer/test.ejs
+++ b/views/lecturer/test.ejs
@@ -43,7 +43,11 @@
             <div class="oq-viewTests">
               <div class="oq-testsHead">
                 <span class="oq-testsHeadText"
-                  ><?php echo strtoupper($subj_code);?></span
+                  >
+                  
+                  <%= module.module_name%>
+      
+                  </span
                 >
                 <div class="pull-right">
                   <!-- <?php
