--- a/views/lecturer/question.ejs
+++ b/views/lecturer/question.ejs
@@ -52,13 +52,19 @@
                                                 ?> -->
                 <div class="row">
                   <div class="col-md-6">
-                    <span class="oq-testsHeadText"
-                      ><?php echo strtoupper($test);?></span
+                    <span class="oq-testsHeadText" >
+                     <%= test.test_name%>
+                      
+                      </span
                     >
                   </div>
                   <div class="col-md-3">
                     <div class="text-center">
-                      <!--    <a href="savetest.php?test=<?php echo $test;?>" class="oq-btn">View the quiz</a> -->
+
+
+                         <!-- <a href="savetest.php?test=<?php echo $test;?>" class="oq-btn">View the quiz</a> -->
+
+
                     </div>
                   </div>
                   <div class="col-md-3">
