--- a/views/student/menu.ejs
+++ b/views/student/menu.ejs
@@ -35,10 +35,9 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
                     <div class="oq-menu">
-                        <span id="oq-subjectsList"><span class="oq-menuHead">
-
-Student Menu Page --- Coming Soon
-                                <?php echo $row['name'];?></span><br><br></span>
+                        <span id="oq-subjectsList"><span class="oq-menuHead">Welcome to edu exam <%= user.first_name %>
+                                 </span><br><br>To know about all the subjects, say List
+                            the subjects </span>
                         <p id="spresult" class="spresult"></p>
                     </div>
                 </div>
@@ -89,7 +88,7 @@ Student Menu Page --- Coming Soon
                 console.log(testThis);
                 testThis.onend = function(event) {
                     console.log("gej");
-                    window.location = "sublist.php";
+                    window.location = "/modules";
                 }
             } else {
                 flag = 2;
@@ -147,8 +146,3 @@ Student Menu Page --- Coming Soon
 </body>
 
 </html>
-
-<?php
-            }
-        }
-?>
