--- a/views/student/modules.ejs
+++ b/views/student/modules.ejs
@@ -3,9 +3,9 @@
 
 <head>
     <title>Welcome Online Exam</title>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
-    <link rel="stylesheet" type="text/css" href="css/font/flaticon.css">
+    <link rel="stylesheet" type="text/css" href="/css/font/flaticon.css">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans|Josefin+Sans" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="description" content="Online Exam">
@@ -33,7 +33,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4">
-                    <div class=""><a href="index.php"><img src="images/quiz.png" class="oq-logo"></a></div>
+                    <div class=""><a href="/"><img src="/images/quiz.png" class="oq-logo"></a></div>
                 </div>
                 <div class="col-md-8">
                     <div class="oq-userArea pull-right">
@@ -63,8 +63,8 @@
     </div>
 
 
-    <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="/js/jquery-3.1.1.min.js"></script>
+    <script src="/js/bootstrap.js"></script>
     <script type="text/javascript">
 
     var wordElement = document.querySelectorAll('.modules'); // Replace with the actual ID or class of the span
