--- a/views/student/module.ejs
+++ b/views/student/module.ejs
@@ -9,12 +9,19 @@
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans|Josefin+Sans" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="description" content="Online Exam">
-    <meta name="author" content="Sukanya Ledalla, Akhil Regonda, Nishanth Kadapakonda">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <% var words = [], k = 0; %>
 
-                    
-
+    <% if (tests.length > 0) { %> 
+        <% tests.forEach(module => { %>
+            <% words[k] = module.module_name; %>
+            <% console.log('Words:' + words); %>
+            <% k++; %>
+        <% }); %>
+    <% } else { %>
+        <% console.log('No Test Available'); %>
+    <% } %>
 </head>
 
 <body>
@@ -39,19 +46,178 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
                     <div class="oq-menu">
-                      The page coming soon --- Accessing exams for <b> <%= module_name%></b> <br> <br>
-                       
-                      <a class="oq-btn btn btn-primary" href="/">Back To Home Page</a>
+
+                        <!-- <script type="text/javascript">
+                        document.write(
+                            '<span id="oq-subjectsList">List of tests for the subject <?php echo $subject?> are..<br><br>'
+                        );
+                        for (i = 0; i < k; i++) {
+
+                            document.write("<span>" + words[i] + ".</span><br>");
+
+                        }
+                        document.write('Choose one by saying the test name or say repeat to repeat the list.</span>');
+                        </script> -->
+
+
+                        <span id="oq-subjectsList">
+                            
+                            <% if (tests.length > 0) { %>
+                                List of tests for the subject <%= module_name %> are.. <br><br>
+                              <% for (let i = 0; i < tests.length; i++) { %>
+                                <span class="tests"><%= words[i] %>.</span><br>
+                              <% } %>
+                              Choose one by saying the test name or say repeat to repeat the list.
+                            <% } else { %>
+                              There are no tests available to write for <%= module_name %> <br> <br> <span>You will be redirected to main page in seconds .</span>
+                            <% } %>
+                          </span>
+
+
+                        <p id="spresult" class="spresult"></p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-
     <script src="/js/jquery-3.1.1.min.js"></script>
     <script src="/js/bootstrap.js"></script>
+    <script type="text/javascript">
 
+    var wordElement = document.querySelectorAll('.tests'); // Replace with the actual ID or class of the span
+    console.log(wordElement);
+    var words = []
+
+    wordElement.forEach(word => {
+        console.log(word.textContent.slice(0, -1));
+        words.push(word.textContent.slice(0, -1))
+    });
+
+    if(words.length == 0){
+        setTimeout(function(){
+            window.location = "/"
+        }, 8000);
+    }
+
+    var syn = window.speechSynthesis;
+    var SpeechRecognition = SpeechRecognition || webkitSpeechRecognition;
+    var SpeechGrammarList = SpeechGrammarList || webkitSpeechGrammarList;
+    var SpeechRecognitionEvent = SpeechRecognitionEvent || webkitSpeechRecognitionEvent;
+    var lsub = document.getElementById("oq-subjectsList").textContent;
+    console.log(lsub);
+    var slsub = new SpeechSynthesisUtterance(lsub);
+    console.log(slsub);
+    syn.speak(slsub);
+    slsub.onend = function(event) {
+        console.log("end");
+        subjects();
+    }
+    var resultPara = document.querySelector('.spresult');
+
+    function subjects() {
+        var flag = 0;
+        console.log("subjects");
+        var grammar = '#JSGF V1.0; grammar phrase; public <phrase> = ' + words + ';';
+        var recognition = new SpeechRecognition();
+        var speechRecognitionList = new SpeechGrammarList();
+        speechRecognitionList.addFromString(grammar, 1);
+        recognition.grammars = speechRecognitionList;
+        recognition.lang = 'en-US';
+        recognition.interimResults = false;
+        recognition.maxAlternatives = 1;
+        recognition.start();
+        recognition.onresult = function(event) {
+            var speechResult = event.results[0][0].transcript;
+            console.log("speechResult:" + speechResult);
+            console.log("words:" + words);
+            for (var i = 0; i < k; i++) {
+                if (speechResult.toLowerCase() === words[i].toLowerCase()) {
+                    flag = 1;
+                    console.log("speech result: " + speechResult);
+                    resultPara.textContent = 'Speech received: ' + speechResult + '.';
+                    var syn = window.speechSynthesis;
+                    var testhead = document.getElementById("spresult").textContent;
+                    var testThis = new SpeechSynthesisUtterance(testhead);
+                    syn.speak(testThis);
+                    console.log(testThis);
+                    testThis.onend = function(event) {
+                        window.location = "test.php?test=" + speechResult;
+                    }
+                    break;
+                } else if (speechResult === "repeat") {
+                    flag = 1;
+                    console.log("speech result: " + speechResult);
+                    resultPara.textContent = 'Speech received: ' + speechResult + '.';
+                    var syn = window.speechSynthesis;
+                    var testhead = document.getElementById("spresult").textContent;
+                    var testThis = new SpeechSynthesisUtterance(testhead);
+                    syn.speak(testThis);
+                    console.log(testThis);
+                    testThis.onend = function(event) {
+                        speakSub();
+                    }
+                    break;
+                }
+            }
+            if (i == k) {
+                flag = 2;
+                resultPara.textContent = 'Speech received: ' + speechResult + '. No such operation.';
+                var syn = window.speechSynthesis;
+                var noOper = document.getElementById("spresult").textContent;
+                var noOpr = new SpeechSynthesisUtterance(noOper);
+                syn.speak(noOpr);
+                console.log("-else");
+                console.log(noOpr);
+                noOpr.onend = function(event) {
+                    console.log('No such operation over. speak time:' + event.elapsedTime + ' milliseconds.');
+                    speakSub();
+                }
+            }
+        }
+        recognition.onend = function() {
+            console.log("onend");
+            if (flag == 1 || flag == 2) {
+                console.log("onend if");
+                console.log("flag :" + flag);
+                recognition.stop();
+            } else {
+                if (flag == 4) {
+                    console.log("flag :" + flag);
+                    recognition.stop();
+                } else {
+                    console.log("onend else else");
+                    recognition.stop();
+                    console.log("flag :" + flag);
+                    speakSub();
+                }
+            }
+        }
+
+        recognition.onerror = function(event) {
+            flag = 4;
+            console.log("flag :" + flag);
+            speakSub();
+        }
+    }
+
+    function speakSub() {
+        console.log("in speakSub");
+        var lsub = document.getElementById("oq-subjectsList").textContent;
+        var slsub = new SpeechSynthesisUtterance(lsub);
+        syn.speak(slsub);
+        console.log("in speakSub");
+        slsub.onend = function(event) {
+            console.log("speekSubend");
+            subjects();
+        }
+    }
+    </script>
 </body>
 
 </html>
+
+<?php
+            }
+        }
+?>
