--- a/views/comingsoon.ejs
+++ b/views/comingsoon.ejs
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
                     <div class="oq-menu">
-                      The page coming soon --- Accessing exams for <b> <%= module_name%></b> <br> <br>
+                      The page coming soon --- Accessing test <br> <br>
                        
                       <a class="oq-btn btn btn-primary" href="/">Back To Home Page</a>
                     </div>
