--- a/views/student/menu.ejs
+++ b/views/student/menu.ejs
@@ -35,6 +35,13 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
                     <div class="oq-menu">
+
+                        <div class="oq-menuHead">
+                            <%= course_name %>
+                        </div>
+                        <hr>
+                        <br>
+
                         <span id="oq-subjectsList"><span class="oq-menuHead">Welcome to edu exam <%= user.first_name %>
                                  </span><br><br>To know about all the subjects, say List
                             the subjects </span>
