--- a/views/register.ejs
+++ b/views/register.ejs
@@ -53,6 +53,13 @@
                             <span id="phoneerror" class="oq-error"></span>
                             <input type="email" class="form-control" placeholder="Enter Email" name="email" required><br>
                         
+                            <span id="phoneerror" class="oq-error"></span>
+                            <input type="text" class="form-control" placeholder="Enter Phone Number" name="phone_number" required><br>
+                        
+                            <span id="phoneerror" class="oq-error"></span>
+                            <input type="text" class="form-control" placeholder="Enter Address" name="user_address" required><br>
+                        
+
                             <span id="passerror" class="oq-error"></span>
                             <input type="password" class="form-control" placeholder="Enter Password" name="password_hash" required><br>
                         
