--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,8 +48,8 @@
                             <p id="login-error-msg" style="color: rgb(230, 98, 98);" >
                        
                             </p>
-                            <input type="email" class="form-control" placeholder="Enter Email"
-                                name="email"><br>
+                            <input type="text" class="form-control" placeholder="Enter Identification Number"
+                                name="identification_number"><br>
                             <input type="password" class="form-control" placeholder="Enter Password"
                                 name="password"><br>
 
