--- a/views/lecturer/test.ejs
+++ b/views/lecturer/test.ejs
@@ -42,13 +42,7 @@
           <div class="col-md-10 col-md-offset-1">
             <div class="oq-viewTests">
               <div class="oq-testsHead">
-                <span class="oq-testsHeadText"
-                  >
-                  
-                  <%= module.module_name%>
-      
-                  </span
-                >
+                <span class="oq-testsHeadText"> <%= module.module_name%> </span>
                 <div class="pull-right">
                   <!-- <?php
                                                         if(isset($_GET['error'])){
@@ -81,6 +75,13 @@
                         method="post"
                       >
                         <span>Test Title</span><br /><br />
+                        <span
+                          id="test-create-error"
+                          style="color: rgb(198, 79, 79)"
+                        >
+                        </span>
+                        <br />
+                        <br />
                         <input
                           type="text"
                           class="form-control"
@@ -126,11 +127,15 @@
                   <tr>
                     <td><%= index + 1 %></td>
                     <td><%= test.test_name %></td>
-                    <td><%= test.testtime %> Mins</td>
+                    <td>40 - Mins</td>
                     <td class="oq-testsoperations">
-                      <a data-toggle='modal' data-target='<%= "." + test.test_id %>' class='oq-editbtn'>
-                                                    <span class='glyphicon glyphicon-pencil'></span> Edit
-                                                </a> 
+                      <a
+                        data-toggle="modal"
+                        data-target='<%= "." + test.test_id %>'
+                        class="oq-editbtn"
+                      >
+                        <span class="glyphicon glyphicon-pencil"></span> Edit
+                      </a>
                       &nbsp;
                       <a
                         href='<%= "/question/view?test=" + test.test_id %>'
@@ -140,9 +145,13 @@
                         Add/Modify questions
                       </a>
                       &nbsp;
-                        <!-- <a data-toggle='modal' data-target='<%= ".del" + test.test_id %>' class='oq-deletebtn'>
-                                  <span class='glyphicon glyphicon-remove'></span> Delete
-</a> -->
+
+                      <a
+                        href="/test/delete/<%= test.test_id %>/<%=module_id%>"
+                        class="oq-deletebtn"
+                        ><span class="glyphicon glyphicon-remove"></span>
+                        Delete</a
+                      >
                     </td>
                   </tr>
                   <div
@@ -155,8 +164,11 @@
                     <div class="modal-dialog" role="document">
                       <div class="modal-content">
                         <div class="modal-body">
-                          <form class="form" action="/test/update/<%= test.test_id %>/<%=module_id %>" method="post">
-
+                          <form
+                            class="form"
+                            action="/test/update/<%= test.test_id %>/<%=module_id %>"
+                            method="post"
+                          >
                             <span>Test Title</span><br /><br />
                             <input
                               type="text"
@@ -246,11 +258,26 @@
 
           const form = document.querySelector("#create-test");
           const formData = new FormData(form);
-
           const jsonFormData = {};
+
+          let testNameEmpty = true;
+
           formData.forEach((value, key) => {
-            jsonFormData[key] = value;
+            console.log(value.trim());
+            if (key === "test_name") {
+              if (value.trim().length <= 0 || value.trim() == "") {
+                errorMessage("Please enter valid test title");
+                testNameEmpty = true;
+              } else {
+                testNameEmpty = false;
+              }
+            }
+            jsonFormData[key] = value.trim();
           });
+
+          if (testNameEmpty) {
+            return; // Prevent form submission if test name is empty
+          }
 
           console.log(jsonFormData);
 
@@ -268,35 +295,46 @@
             body: JSON.stringify(jsonFormData),
           })
             .then((response) => {
-              if (!response.ok) {
-                throw new Error("Network response was not ok");
-              }
               return response.json();
             })
             .then((data) => {
               if (data.status === true) {
-                console.log("Module created successfully!");
+                console.log("Test created successfully!");
                 console.log(data);
-                // Close the modal
-                const currentModuleId = window.location.pathname
-                  .split("/")
-                  .pop();
-                const currentURL = `/test/view/${currentModuleId}`;
+                const currentTestId = window.location.pathname.split("/").pop();
+                const currentURL = `/test/view/${currentTestId}`;
                 window.location.href = currentURL;
               } else {
                 console.error(`Error: ${data.message}`);
-                const errorDiv = document.querySelector("#test-error");
-                errorDiv.textContent = `Error: ${data.message}`;
-                errorDiv.classList.add("text-danger");
+                enableBtn();
               }
             })
             .catch((error) => {
-              console.error(`Error: ${data.message}`);
-              const errorDiv = document.querySelector("#test-error");
-              errorDiv.textContent = `Error: ${data.message}`;
-              errorDiv.classList.add("text-danger");
+              console.error(`Error: ${error.message}`);
+              enableBtn();
             });
         });
+
+      function errorMessage(message) {
+        document.getElementById("test-create-error").textContent = `${message}`;
+        enableBtn();
+      }
+
+      function enableBtn() {
+        const createBtn = document.getElementById("create-test-btn");
+        createBtn.disabled = false;
+        createBtn.value = "Create";
+      }
+
+      function errorMessage(message) {
+        document.getElementById("test-create-error").textContent = `${message}`;
+        enableBtn();
+      }
+      function enableBtn() {
+        const createBtn = document.getElementById("create-test-btn");
+        createBtn.disabled = false;
+        createBtn.value = "Create";
+      }
 
       // DELETE MODULE
 
