--- a/views/admin/menu.ejs
+++ b/views/admin/menu.ejs
@@ -45,33 +45,24 @@
               <div class="text-center">
                 <img src="images/quiz_1.png" class="oq-logo" /><br /><br />
               </div>
-              <a
+              <!-- <a
                 ><span class="flaticon-select-list"></span>&nbsp;&nbsp;
-                View/Edit Module
-                <small style="color: black">( coming soon )</small></a
-              ><br /><br />
+                View/Edit Module <small style="color: black"></small></a
+              ><br /><br /> -->
 
-              <a
+              <!-- <a
                 ><span class="flaticon-select-list"></span>&nbsp;&nbsp;
                 View/Edit Test
                 <small style="color: black">( coming soon )</small></a
+              ><br /><br /> -->
+              <a href="/students"
+                ><span class="flaticon-select-list"></span>&nbsp;&nbsp;
+                View/Edit Student <small style="color: black"></small></a
               ><br /><br />
 
-              <a
+              <a href="/lecturers"
                 ><span class="flaticon-select-list"></span>&nbsp;&nbsp;
-                View/Edit Questions
-                <small style="color: black">( coming soon )</small></a
-              ><br /><br />
-              <a
-                ><span class="flaticon-select-list"></span>&nbsp;&nbsp;
-                View/Edit Student
-                <small style="color: black">( coming soon )</small></a
-              ><br /><br />
-
-              <a
-                ><span class="flaticon-select-list"></span>&nbsp;&nbsp;
-                View/Edit Lecturer
-                <small style="color: black">( coming soon )</small></a
+                View/Edit Lecturer <small style="color: black"></small></a
               ><br /><br />
             </div>
           </div>
