--- a/views/student/module.ejs
+++ b/views/student/module.ejs
@@ -145,7 +145,7 @@
             console.log("speechResult:" + speechResult);
             console.log("words:" + words);
             for (var i = 0; i < words.length; i++) {
-                if (speechResult.toLowerCase() === words[i].toLowerCase()) {
+                if (speechResult.toLowerCase() === words[i].toLowerCase() || speechResult.toLowerCase() === `${words[i].toLowerCase()}.`) {
                     flag = 1;
                     console.log("speech result: " + speechResult);
                     resultPara.textContent = 'Speech received: ' + speechResult + '.';
