--- a/views/student/oldtest.ejs
+++ b/views/student/oldtest.ejs
@@ -91,35 +91,70 @@
               </div>
               <div class="row">
                 <div class="col-md-8">
-                 
-                  <form action="result.php" method="post" name="oqform" id="oqform">
-                    <input type='hidden' id='rowscount' name='totalQus'>
-                    <p id='spresult2' class='spresult2'></p>
-                    
+                  <form action="" method="post" name="oqform">
+                    <% if(questions.length > 0) { %>
+                    <input
+                      type="hidden"
+                      id="rowscount"
+                      name="totalQus"
+                      value="<%=questions.length%>"
+                    />
+                    <p id="spresult2" class="spresult2"></p>
+
                     <div id="questionsContainer">
-                        <% questions.forEach((question, index) => { %>
-                            <div class='question'>
-                                <button class='oq-aLeft oq-questions oq-form-control' disabled>
-                                    Question <%= index + 1 %>: <%= question.question_text %>
-                                </button>
-                                <input type='hidden' id='<%= question.question_id %>' name='question_id<%= index %>' value='<%= question.question_id %>'>
-                                <input type='hidden' name='test_id<%= index %>' value='<%= question.test_id %>'>
-                                <br>
-                                <textarea class="form-control user_response" name="user_response" id='<%= question.question_id %>' cols="30" rows="5"></textarea>
-                                <br><br>
-                            </div>
-                        <% }); %>
+                      <% questions.forEach((question, index) => { %>
+                      <div class="question" style="display: none">
+                        <button
+                          class="oq-aLeft oq-questions oq-form-control"
+                          disabled
+                        >
+                          Question <%= (index + 1) %>: <%=
+                          question.question_text %>
+                        </button>
+
+                        <input
+                          type="hidden"
+                          name="question_id<%=index %>"
+                          value="<%=question.question_id%>"
+                        />
+                        <input
+                          type="hidden"
+                          name="test_id<%=index %>"
+                          value="<%=question.question_id%>"
+                        />
+                        <br />
+
+                        <textarea
+                          class="form-control user_response"
+                          name="user_response"
+                          id="<%=question.question_id%>"
+                          cols="30"
+                          rows="5"
+                        ></textarea>
+                        <br /><br />
+                      </div>
+                      <% }) %>
                     </div>
-        
-                    <br><br>
-                    <input type='submit' class='oq-btn' name='submit' id='oqsubmit' value='submit test'>
-                </form>
 
-
-
+                    <br /><br />
+                    <input
+                      type="submit"
+                      class="oq-btn"
+                      name="submit"
+                      id="oqsubmit"
+                      value="submit test"
+                    />
+                    <% } %>
+                  </form>
                 </div>
               </div>
-
+<!-- 
+              <div class="oq-menu">
+                The page coming soon --- for writing a using voice command test
+                <br />
+                <br />
+                <a class="oq-btn btn btn-primary" href="/">Back To Home Page</a>
+              </div> -->
             </div>
           </div>
         </div>
